src/app/app.component.css
.example-toolbar {
    position: fixed;
    z-index: 200;
}

#router-out {
    bottom: 0;
    padding-top: 0;
    padding-bottom: 0;
}

#router-out, .example-toolbar {
    width: calc(100% - 20vw);
    margin-left: 20vw;
}

#top-gap {
    height: 64px;
}

@media (max-width: 1200px) {
    .example-toolbar {
        position: absolute;
    }
    #router-out, .example-toolbar {
        width: calc(100% - 240px);
        margin-left: 240px;
    }
}

@media (max-width: 960px) {
    #router-out, .example-toolbar {
        width: 100%;
        margin-left: 0;
        margin-top: 0;
    }
}

@media (max-width: 600px) {
    #top-gap {
        height: 57px;
    }
}

#swipe-right-area {
    /* Uncomment and set opacity to 0.5 for debugging */
    /* background-color:green; */
    opacity: 0;
    position: fixed;
    left: 0;
    top: 0;
    height: 100vh;
    width: 3vw;
    max-width: 12px;
    z-index: 1000;
}

.fill-space {
    flex: 1 1 auto;
}

.no-margin {
    margin-top: 0;
}

:focus {
    outline: none;
}
::-moz-focus-inner {
    border: 0;
}

h1.example-app-name {
    margin-left: 8px;
    text-decoration: none;
    cursor:pointer;
}

.sidenav-container {
    height: 100%;
}

